Fix letter spacing for lists

--- a/themes/homecamp/assets/scss/style.scss
+++ b/themes/homecamp/assets/scss/style.scss
@@ -139,6 +139,12 @@ p{
         letter-spacing: 0em;
     }
 }
+li{
+  
+    body.rtl & {
+        letter-spacing: 0em;
+    }
+}
 a.disabled, .dropdown-item:disabled {
     /* Make the disabled links grayish*/
     color: $border-color !important;
